Fixed navbar colors for better readability

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -76,13 +76,13 @@ aside {
     @include sans-serif-font;
     @include transition-all;
     .navbar-header .navbar-brand {
-        color: $theme-primary;
+        color: lighten($theme-primary, 15%);
         @include sans-serif-font;
         font-weight: 700;
         text-transform: uppercase;
         &:hover,
         &:focus {
-            color: darken($theme-primary, 10%);
+            color: $theme-primary;
         }
     }
     .nav {
@@ -92,15 +92,15 @@ aside {
                 text-transform: uppercase;
                 font-weight: 700;
                 font-size: 13px;
-                color: $theme-dark;
+                color: white;
                 &:hover {
-                    color: $theme-primary;
+                    color: lighten($theme-primary, 15%);
                 }
             }
             &.active {
                 > a,
                 > a:focus {
-                    color: $theme-primary !important;
+                    color: lighten($theme-primary, 15%) !important;
                     background-color: transparent;
                     &:hover {
                         background-color: transparent;
@@ -130,11 +130,11 @@ aside {
             background-color: $theme-dark;
             border-color: rgba($theme-dark, 0.5);
             .navbar-header .navbar-brand {
-                color: $theme-primary;
+                color: lighten($theme-primary, 15%);
                 font-size: 14px;
                 &:hover,
                 &:focus {
-                    color: darken($theme-primary, 10%);
+                    color: $theme-primary;
                 }
             }
             .nav > li > a,
